--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Фильмы</title>
 </head>
-<body>
+<body bgcolor="8000FF">
     <h1>Сколько фильиов вы уже посмотрели?</h1>
+    <h2>А вы знали что большинство россиян предпочитают смотреть коммедии в круг семьи.....???</h2>
+    <p>All in all was loving her for 3 months...  Omg - 3months... bruh../))</p>
+    <p>"Ладно, видимо я и вправду слишком ахуенный" Егорicss<sub>c</sub>...</p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p>По вопросам рекламы писать egor-syrov@bk.ru</p>
     <script src="script.js"></script>
 </body>
 </html>
